# squid

./: Cargo.toml  LICENSE  README.md
app/: package-lock.json  package.json
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
old-squid-app/src-tauri/: Cargo.toml  (+1 more)
squid-app/: Cargo.toml  package-lock.json  package.json  test.mid
squid-app/gui/: globals.lua  main.lua
squid-app/gui/components/: center.lua  col.lua  container.lua  dual_channel_oscilloscope.lua  img.lua  knob.lua  level_meter.lua  mixer_track.lua  oscilloscope.lua  prelude.lua  rect.lua  row.lua  text.lua  vectorscope.lua  vfader.lua  workspace_indicator.lua  wspoint.lua
squid-app/gui/core/: animator.lua  base_component.lua  event_manager.lua  interaction_manager.lua  layout.lua  note_map.lua  size.lua  update_manager.lua  workspace_manager.lua
squid-app/gui/core/animation/: animator.lua  continuous_animator.lua
squid-app/gui/core/event/: event_manager.lua
squid-app/gui/core/event/handlers/: keyboard_handler.lua  mouse_handler.lua
squid-app/gui/helpers/: color.lua  drawing.lua
squid-app/gui/layouts/: l1.lua  l2.lua  l3.lua  l4.lua  mixer.lua  topbar.lua  workspace.lua
squid-app/gui/lib/lua_midi/: LuaMidi.lua
squid-app/src/: api.rs  main.rs
squid-app/src-tauri/src/: lib.rs  main.rs
squid-app/src/js/: main.js
squid-app/src/js/components/: LoudnessMeter.js  MasterTrack.js  Oscilloscope.js  VerticalFader.js
squid-app/src/js/core/: AppController.js  BaseComponent.js  Layout.js
squid-core/: Cargo.toml
squid-engine/: Cargo.toml
src/: config.rs  lib.rs  main.rs
(+119 files in other folders)
