[package]
name = "squid-app"
version = "0.1.0"
edition = "2024"

[dependencies]

squid-core = { path = "../squid-core" }
squid-engine = { path = "../squid-engine" }

macroquad = "0.4.14"
mlua = {version = "0.11.4", features = ["luajit", "async",  "macros"]}
futures = "0.3.31"
midly = "0.5.3"
#mlua = {version = "0.11.4", features = ["lua54", "vendored"]}
